--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,3 @@
-#sidebar {
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-  border-style: solid;
-  border-width: 1px;
-  border-color: #dfdfdf;
-  border-radius: 15px;
-  padding: 20px;
-  box-sizing: border-box;
-  height: calc(100vh - 105px);
-  width: calc(33% - 15px);
-  background-color: var(--bg-color);
-  position: absolute;
-  top: 90px;
-  left: 15px; }
-
 #previewBox {
   scrollbar-width: none;
   overflow-y: scroll;
@@ -173,13 +158,72 @@
   #realPageNavbar .realRightNav:hover {
     background-color: rgba(255, 255, 255, 0.1); }
 
-.alertVisible {
+#sidebar {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  border-style: solid;
+  border-width: 1px;
+  border-color: #dfdfdf;
+  border-radius: 15px;
+  padding: 20px;
+  box-sizing: border-box;
+  height: calc(100vh - 105px);
+  width: calc(33% - 15px);
+  background-color: var(--bg-color);
+  position: absolute;
+  top: 90px;
+  left: 15px; }
+  #sidebar .settingsCell {
+    background-color: var(--sidebarTableCellBg);
+    margin: 0 auto;
+    padding: 15px;
+    border-radius: 10px;
+    padding-bottom: 60px;
+    box-sizing: border-box; }
+    #sidebar .settingsCell h3 {
+      margin: 0; }
+    #sidebar .settingsCell p {
+      margin: 0;
+      margin-top: 5px;
+      margin-bottom: 10px; }
+    #sidebar .settingsCell input {
+      border-color: #dfdfdf;
+      border-style: solid;
+      border-width: 1px;
+      float: left;
+      text-align: left;
+      font-size: 12pt;
+      display: block;
+      background-color: rgba(0, 0, 0, 0.15);
+      outline: none !important;
+      box-shadow: none;
+      border: none;
+      padding-top: 9px;
+      padding-bottom: 9px;
+      padding-left: 30px;
+      padding-right: 30px;
+      box-sizing: border-box;
+      border-radius: 10px;
+      width: calc(100% - 70px); }
+    #sidebar .settingsCell .colorPreview {
+      border-color: #dfdfdf;
+      border-style: solid;
+      border-width: 1px;
+      float: right;
+      padding-top: 9px;
+      padding-bottom: 9px;
+      color: rgba(0, 0, 0, 0);
+      border-radius: 10px;
+      width: 60px; }
+
+.alertVisible #alertWindow {
   animation: popAlert 0.6s ease; }
-  .alertVisible #everythingWrapper {
-    filter: blur(4px); }
-  .alertVisible #alertContainer {
-    display: inline;
-    opacity: 1; }
+
+.alertVisible #everythingWrapper {
+  filter: blur(4px); }
+
+.alertVisible #alertContainer {
+  display: inline;
+  opacity: 1; }
 
 @keyframes popAlert {
   from {
@@ -332,7 +376,8 @@
   max-width: 100% !important; }
 
 html {
-  --body-bg-color: #f8f9fa; }
+  --body-bg-color: #f8f9fa;
+  --sidebarTableCellBg: rgba(0,0,0,.03); }
 
 body {
   background-color: var(--body-bg-color); }
