--- a/css/main.css
+++ b/css/main.css
@@ -92,25 +92,28 @@
 
 /* Add View Button */
 .addViewButton {
+  opacity: 0.4;
   cursor: pointer;
-  background-size: 25px;
+  background-size: 18px;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url(../img/add.svg);
   margin: 10px auto;
   width: calc(100% - 15px);
-  height: 40px;
+  height: 30px;
   border-radius: 5px;
   border-color: rgba(0, 0, 0, 0);
   border-width: 2px;
   border-style: dashed;
-  transition: height 0.3s ease, border-color 0.3s ease;
-  -webkit-transition: height 0.3s ease, border-color 0.3s ease;
-  -moz-transition: height 0.3s ease, border-color 0.3s ease;
-  -o-transition: height 0.3s ease, border-color 0.3s ease;
-  -ms-transition: height 0.3s ease, border-color 0.3s ease; }
+  transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+  -webkit-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+  -moz-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+  -o-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+  -ms-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease; }
 
 .addViewButton:hover {
+  background-size: 25px;
+  opacity: 1;
   border-color: var(--tint-color);
   height: 100px; }
 
@@ -159,6 +162,7 @@
     background-color: rgba(255, 255, 255, 0.1); }
 
 #sidebar {
+  text-align: center;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   border-style: solid;
   border-width: 1px;
@@ -172,6 +176,23 @@
   position: absolute;
   top: 90px;
   left: 15px; }
+  #sidebar button {
+    display: inline-block;
+    margin: 15px 5px;
+    text-align: center;
+    cursor: pointer;
+    width: calc(50% - 20px);
+    box-sizing: border-box;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 14px;
+    font-weight: var(--semi-bold);
+    font-size: 12pt;
+    color: white;
+    background-color: var(--tint-color); }
+  #sidebar button:hover {
+    opacity: .8; }
   #sidebar .settingsCell {
     background-color: var(--sidebarTableCellBg);
     margin: 0 auto;
@@ -368,6 +389,35 @@
   box-sizing: border-box;
   border-radius: 100px;
   width: calc(100% - 70px); }
+
+#addViewUI {
+  max-width: 100%;
+  margin-top: 30px;
+  text-align: center; }
+  #addViewUI .viewPreviewContainer {
+    border-radius: 10px;
+    padding: 8px;
+    display: inline-block;
+    margin: 4px;
+    border-width: 2px;
+    border-style: dashed;
+    border-color: rgba(0, 0, 0, 0); }
+    #addViewUI .viewPreviewContainer:hover {
+      border-color: var(--tint-color); }
+      #addViewUI .viewPreviewContainer:hover h1 {
+        color: var(--tint-color);
+        font-weight: bold; }
+    #addViewUI .viewPreviewContainer h1 {
+      margin-top: 10px;
+      font-size: 12pt;
+      font-weight: var(--semi-bold); }
+    #addViewUI .viewPreviewContainer .viewPreview {
+      border-radius: 5px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      width: 240px;
+      height: 140px; }
 
 .hideEditUI .editUI {
   display: none; }
