--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -98,25 +98,28 @@
 
 /* Add View Button */
 .addViewButton {
+    opacity: 0.4;
     cursor: pointer;
-    background-size: 25px;
+    background-size: 18px;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url(../img/add.svg);
     margin: 10px auto;
     width: calc(100% - 15px);
-    height: 40px;
+    height: 30px;
     border-radius: 5px;
     border-color: rgba(0,0,0,0);
     border-width: 2px;
     border-style: dashed;
-    transition: height 0.3s ease, border-color 0.3s ease;
-    -webkit-transition: height 0.3s ease, border-color 0.3s ease;
-    -moz-transition: height 0.3s ease, border-color 0.3s ease;
-    -o-transition: height 0.3s ease, border-color 0.3s ease;
-    -ms-transition: height 0.3s ease, border-color 0.3s ease;
+    transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+    -webkit-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+    -moz-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+    -o-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
+    -ms-transition: height 0.3s ease, border-color 0.3s ease, background-size 0.3s ease;
 }
 .addViewButton:hover {
+    background-size: 25px;
+    opacity: 1;
     border-color: var(--tint-color);
     height: 100px;
 }
