--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,4 +1,5 @@
 #sidebar {
+    text-align: center;
     box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,.075);
     border-style: solid;
     border-width: 1px;
@@ -12,6 +13,26 @@
     position: absolute;
     top: 90px;
     left: 15px;
+
+    button {
+        display: inline-block;
+        margin: 15px 5px;
+        text-align: center;
+        cursor: pointer;
+        width: calc(50% - 20px);
+        box-sizing: border-box;
+        border-radius: 10px;
+        outline: none;
+        border: none;
+        padding: 14px;
+        font-weight: var(--semi-bold);
+        font-size: 12pt;
+        color: white;
+        background-color: var(--tint-color);
+    }
+    button:hover {
+        opacity: .8;
+    }
 
     .settingsCell {
         background-color: var(--sidebarTableCellBg);
