--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -32,8 +32,28 @@
     }
 }
 
+// Switch page for alert window
+@keyframes switchAlertPage {
+    50% {
+        transform: translate(-150%, -50%) scale(0);
+        opacity: 0;
+    }
+    51% {
+        transform: translate(50%, -50%) scale(0);
+        opacity: 0;
+    }
+    to {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+}
+.switchAlertPage {
+    animation: switchAlertPage 0.6s ease !important;
+}
+
 // Black Background behind Alert
 #alertContainer {
+    overflow: hidden;
     display: none;
     opacity: 0;
     width: 100%;
