--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -3,7 +3,6 @@
     #alertWindow {
         animation: popAlert 0.6s ease;
     }
-
     #everythingWrapper {
         filter: blur(4px);
     }
@@ -92,13 +91,13 @@
         font-size: 16pt;
     }
     * {
-        margin: 0 auto;
+        margin: 8px auto;
         max-width: 600px;
         text-align: center;
     }
     #alertButton {
         cursor: pointer;
-        margin-top: 60px;
+        margin-top: 40px;
         max-width: 300px;
         width: 100%;
         border-radius: 10px;
