--- a/scss/alerts/_editTabsUI.scss
+++ b/scss/alerts/_editTabsUI.scss
@@ -10,21 +10,8 @@
         height: 50px;
     }
     input {
+        width: calc(100% - 60px);
         float: left;
-        text-align: left;
-        font-size: 12pt;
-        display: block;
-        background-color: rgba(0,0,0,.1);
-        outline: none !important;
-        box-shadow: none;
-        border: none;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-left: 30px;
-        padding-right: 30px;
-        box-sizing: border-box;
-        border-radius: 100px;
-        width: calc(100% - 70px);
     }
     #addTabButton {
         cursor: pointer;
@@ -41,13 +28,13 @@
     }
     .deleteField {
         cursor: pointer;
-        background-size: 25px;
+        background-size: 23px;
         background-repeat: no-repeat;
         background-position: center;
         background-image: url(../img/delete.svg);
         float: right;
-        width: 50px;
-        height: 50px;
+        width: calc(12pt + 25px);
+        height: calc(12pt + 25px);
         background-color: #ed4040;
         border-radius: 50%;
     }
