--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,6 @@
 
 @import 'alerts/alerts.scss';
 @import 'alerts/editTabsUI.scss';
-@import 'alerts/editBannerUI.scss';
 @import 'alerts/addViewUI.scss';
 
 @import 'hideEditUI.scss';
@@ -16,4 +15,24 @@ html {
 
 body {
     background-color: var(--body-bg-color);
+}
+
+input[type=text] {
+    border-color: rgb(223, 223, 223);
+    border-style: solid;
+    border-width: 1px;
+    text-align: left !important;
+    font-size: 12pt;
+    display: block;
+    background-color: rgba(0,0,0,.1);
+    outline: none !important;
+    box-shadow: none;
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    box-sizing: border-box;
+    border-radius: 100px;
+    width: calc(100% - 70px);
 }
