--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,48 @@
     padding-bottom: 5px;
     background-color: #ed4040;
     color: white; }
+  #alertWindow .optionWrapper {
+    display: inline-block;
+    margin-bottom: 12px; }
+    #alertWindow .optionWrapper .checkboxWrapper {
+      padding: 10px;
+      position: relative;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      padding-left: 35px;
+      padding-right: 35px; }
+      #alertWindow .optionWrapper .checkboxWrapper input[type=checkbox] {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0; }
+      #alertWindow .optionWrapper .checkboxWrapper .checkmark {
+        overflow: hidden;
+        border-radius: 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: #eee; }
+      #alertWindow .optionWrapper .checkboxWrapper input:checked ~ .checkmark {
+        background-color: var(--tint-color); }
+      #alertWindow .optionWrapper .checkboxWrapper .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+        left: 9px;
+        top: 5px;
+        width: 5px;
+        height: 10px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        transform: rotate(45deg); }
+      #alertWindow .optionWrapper .checkboxWrapper input:checked ~ .checkmark:after {
+        display: block; }
 
 #editTabsUI h3 {
   margin-bottom: 20px; }
@@ -408,11 +450,11 @@ input[type=text] {
   border-color: #dfdfdf;
   border-style: solid;
   border-width: 1px;
-  text-align: left !important;
   font-size: 12pt;
-  display: block;
   background-color: rgba(0, 0, 0, 0.1);
   outline: none !important;
+  display: block;
+  text-align: left !important;
   box-shadow: none;
   border: none;
   padding-top: 10px;
