--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,15 +17,16 @@ body {
     background-color: var(--body-bg-color);
 }
 
+// Text Form Elements
 input[type=text] {
     border-color: rgb(223, 223, 223);
     border-style: solid;
     border-width: 1px;
-    text-align: left !important;
     font-size: 12pt;
-    display: block;
     background-color: rgba(0,0,0,.1);
     outline: none !important;
+    display: block;
+    text-align: left !important;
     box-shadow: none;
     border: none;
     padding-top: 10px;
