Subheading Edit UI

--- a/css/main.css
+++ b/css/main.css
@@ -415,7 +415,12 @@
     margin: 4px;
     border-width: 2px;
     border-style: dashed;
-    border-color: rgba(0, 0, 0, 0); }
+    border-color: rgba(0, 0, 0, 0);
+    transition: border-color 0.15s ease, font-weight 0.15s ease, color 0.15s ease;
+    -webkit-transition: border-color 0.15s ease, font-weight 0.15s ease, color 0.15s ease;
+    -moz-transition: border-color 0.15s ease, font-weight 0.15s ease, color 0.15s ease;
+    -o-transition: border-color 0.15s ease, font-weight 0.15s ease, color 0.15s ease;
+    -ms-transition: border-color 0.15s ease, font-weight 0.15s ease, color 0.15s ease; }
     #addViewUI .viewPreviewContainer:hover {
       border-color: var(--tint-color); }
       #addViewUI .viewPreviewContainer:hover h1 {
@@ -426,7 +431,7 @@
       font-size: 12pt;
       font-weight: var(--semi-bold); }
     #addViewUI .viewPreviewContainer .viewPreview {
-      border-radius: 5px;
+      border-radius: 9px;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
