--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -61,11 +61,11 @@
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,.75);
-    transition: oapcity 0.35s ease;
-    -webkit-transition: oapcity 0.35s ease;
-    -moz-transition: oapcity 0.35s ease;
-    -o-transition: oapcity 0.35s ease;
-    -ms-transition: oapcity 0.35s ease;
+    transition: opacity 0.35s ease;
+    -webkit-transition: opacity 0.35s ease;
+    -moz-transition: opacity 0.35s ease;
+    -o-transition: opacity 0.35s ease;
+    -ms-transition: opacity 0.35s ease;
 }
 
 // Main Alert Window
@@ -126,11 +126,64 @@
         color: white;
     }
 
+    input[type=text] {
+        height: 50px;
+        width: calc(100% - 25px);
+        box-sizing: border-box;
+    }
+
 
     // Form Elements 
     .optionWrapper {
+        position: relative;
+        height: 50px;
+        line-height: 50px;
+        width: calc(50% - 20px);
+        box-sizing: border-box;
+        background-color: var(--dark-ui-color);
+        border-radius: 10px;
         display: inline-block;
         margin-bottom: 12px;
+        margin-left: 6px;
+        margin-right: 6px;
+        border-color: rgba(0,0,0,0);
+        border-width: 2px;
+        border-style: dashed;
+        transition: border-color 0.25s ease, border-radius 0.15s ease;
+            -webkit-transition: border-color 0.25s ease, border-radius 0.15s ease;
+            -moz-transition: border-color 0.25s ease, border-radius 0.15s ease;
+            -o-transition: border-color 0.25s ease, border-radius 0.15s ease;
+            -ms-transition: border-color 0.25s ease, border-radius 0.15s ease;
+
+        .tooltip {
+            color: white;
+            width: calc(100% + 4px);
+            box-sizing: border-box;
+            padding: 16px 8px;
+            border-radius: 10px 10px 0 0;
+            background-color: var(--tint-color);
+            line-height: normal;
+            position: absolute;
+            top: -8px;
+            left: -2px;
+            opacity: 0;
+            visibility: hidden;
+            transition: transform 0.15s ease, opacity 0.35s ease;
+                -webkit-transition: transform 0.15s ease, opacity 0.35s ease;
+                -moz-transition: transform 0.15s ease, opacity 0.35s ease;
+                -o-transition: transform 0.15s ease, opacity 0.35s ease;
+                -ms-transition: transform 0.15s ease, opacity 0.35s ease;
+        }
+        &:hover {
+            border-color: var(--tint-color);
+            border-radius: 0 0 10px 10px;
+
+            .tooltip {
+                visibility: visible;
+                transform: translateY(-100%);
+                opacity: 1;
+            }
+        }
 
         .checkboxWrapper {
             padding: 10px;
