--- a/scss/alerts/_editTabsUI.scss
+++ b/scss/alerts/_editTabsUI.scss
@@ -10,21 +10,19 @@
         height: 50px;
     }
     input {
-        width: calc(100% - 60px);
+        width: calc(100% - 60px) !important;
         float: left;
     }
     #addTabButton {
         cursor: pointer;
-        margin-top: 20px;
-        max-width: 250px;
+        margin-top: 40px;
+        width: calc(100% - 100px);
         font-size: 12pt;
-        background-color: rgba(0,0,0,.25);
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-left: 30px;
-        padding-right: 30px;
+        background-color: var(--darker-ui-color);
+        height: 50px;
+        line-height: 50px;
         box-sizing: border-box;
-        border-radius: 100px;
+        border-radius: 10px;
     }
     .deleteField {
         cursor: pointer;
@@ -33,8 +31,8 @@
         background-position: center;
         background-image: url(../img/delete.svg);
         float: right;
-        width: calc(12pt + 25px);
-        height: calc(12pt + 25px);
+        width: 50px;
+        height: 50px;
         background-color: #ed4040;
         border-radius: 50%;
     }
