--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,16 @@
     height: 50px;
     width: calc(100% - 25px);
     box-sizing: border-box; }
+  #alertWindow .fontColor {
+    padding: 0 20px !important;
+    width: calc(50% - 20px) !important;
+    position: relative !important;
+    display: inline-block !important;
+    margin-bottom: 12px !important;
+    margin-left: 6px !important;
+    margin-right: 6px !important;
+    margin-top: 8px !important;
+    text-align: center !important; }
   #alertWindow .optionWrapper {
     position: relative;
     height: 50px;
@@ -388,6 +398,9 @@
         height: 0;
         width: 0; }
       #alertWindow .optionWrapper .checkboxWrapper .checkmark {
+        border-width: 1px;
+        border-color: var(--tint-color);
+        border-style: solid;
         overflow: hidden;
         border-radius: 50%;
         position: absolute;
