--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'alerts/alerts.scss';
 @import 'alerts/editTabsUI.scss';
 @import 'alerts/addViewUI.scss';
+@import 'alerts/markdownView';
 
 @import 'hideEditUI.scss';
 
