--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@
   #alertWindow #alertSubheader {
     margin-top: 0;
     font-size: 16pt; }
-  #alertWindow * {
+  #alertWindow h1, #alertWindow h2, #alertWindow p, #alertWindow #alertButton, #alertWindow .alertError, #alertWindow .optionWrapper input, #alertWindow .checkmark, #alertWindow .tooltip, #alertWindow .optionWrapper, #alertWindow .alertContent, #alertWindow input[type=text] {
     margin: 8px auto;
     max-width: 600px;
     text-align: center; }
@@ -337,6 +337,28 @@
     margin-right: 6px !important;
     margin-top: 8px !important;
     text-align: center !important; }
+  #alertWindow #editDepictionMarkdownView * {
+    border: none !important; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror-cursor {
+    border-left: 1px solid var(--text-color) !important; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar, #alertWindow #editDepictionMarkdownView .CodeMirror {
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    box-sizing: border-box;
+    border-radius: 10px; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar {
+    height: 50px;
+    line-height: 0;
+    max-height: 50px; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar a, #alertWindow #editDepictionMarkdownView .editor-toolbar:before {
+    margin: 0 !important; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror {
+    margin-top: 10px; }
   #alertWindow .optionWrapper {
     position: relative;
     height: 50px;
@@ -462,9 +484,8 @@
   border-radius: 50%; }
 
 #addViewUI {
-  max-width: 100%;
-  margin-top: 30px;
-  text-align: center; }
+  max-width: 100% !important;
+  margin-top: 30px !important; }
   #addViewUI .viewPreviewContainer {
     border-radius: 10px;
     padding: 8px;
@@ -494,6 +515,39 @@
       background-repeat: no-repeat;
       width: 240px;
       height: 140px; }
+
+#alertWindow #editDepictionMarkdownView {
+  max-width: 800px;
+  margin: 0 auto; }
+  #alertWindow #editDepictionMarkdownView * {
+    border: none !important; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror-cursor {
+    border-left: 1px solid var(--text-color) !important; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar, #alertWindow #editDepictionMarkdownView .CodeMirror, #alertWindow #editDepictionMarkdownView .editor-statusbar {
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border-radius: 10px; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar, #alertWindow #editDepictionMarkdownView .editor-statusbar {
+    text-align: center;
+    height: 50px;
+    line-height: 0;
+    max-height: 50px; }
+  #alertWindow #editDepictionMarkdownView .editor-statusbar {
+    padding: 0;
+    margin-top: 10px;
+    height: 50px;
+    line-height: 50px; }
+    #alertWindow #editDepictionMarkdownView .editor-statusbar span {
+      text-transform: capitalize;
+      margin-top: 0;
+      font-size: 12pt; }
+  #alertWindow #editDepictionMarkdownView .editor-toolbar a, #alertWindow #editDepictionMarkdownView .editor-toolbar:before {
+    margin: 0 !important; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror {
+    padding: 20px;
+    margin-top: 10px; }
 
 .hideEditUI .editUI {
   display: none; }
