--- a/scss/alerts/_addViewUI.scss
+++ b/scss/alerts/_addViewUI.scss
@@ -1,7 +1,6 @@
 #addViewUI {
-    max-width: 100%;
-    margin-top: 30px;
-    text-align: center;
+    max-width: 100% !important;
+    margin-top: 30px !important;
 
     //View Preview Boxes
     .viewPreviewContainer {
