--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,7 +29,7 @@ input[type=text] {
     background-color: rgba(0,0,0,.1);
     outline: none !important;
     display: block;
-    text-align: left !important;
+    text-align: left;
     box-shadow: none;
     border: none;
     padding-top: 10px;
