--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -70,6 +70,8 @@
 
 // Main Alert Window
 #alertWindow {
+    max-height: calc(100% - 130px);
+    overflow-y: scroll;
     width: calc(100% - 20px);
     max-width: 1000px;
     border-radius: 15px;
@@ -77,7 +79,7 @@
     box-sizing: border-box;
     background-color: var(--bg-color);
     position: absolute;
-    top: 50%;
+    top: calc(50% + 37px);
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -130,20 +132,7 @@
         height: 50px;
         width: calc(100% - 25px);
         box-sizing: border-box;
-    }
-    // Font Color Input Box
-    .fontColor {
-        padding: 0 20px !important;
-        width: calc(50% - 20px) !important;
-        position: relative !important;
-        display: inline-block !important;
-        margin-bottom: 12px !important;
-        margin-left: 6px !important;
-        margin-right: 6px !important;
-        margin-top: 8px !important;
-        text-align: center !important;
-    }
-    
+    }    
 
     // Form Elements 
     .optionWrapper {
@@ -166,6 +155,13 @@
             -moz-transition: border-color 0.25s ease, border-radius 0.15s ease;
             -o-transition: border-color 0.25s ease, border-radius 0.15s ease;
             -ms-transition: border-color 0.25s ease, border-radius 0.15s ease;
+
+        input[type=text] {
+            background: none !important;
+            width: 100% !important;
+            height: 100% !important;
+            margin-top: 0 !important;
+        }
 
         .tooltip {
             color: white;
