--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -92,7 +92,7 @@
         margin-top: 0;
         font-size: 16pt;
     }
-    h1, h2, p, #alertButton, .alertError, .optionWrapper input, .checkmark, .tooltip, .optionWrapper, .alertContent, input[type=text] {
+    h1, h2, h3, p, #alertButton, .alertError, .optionWrapper input, .checkmark, .tooltip, .optionWrapper, .alertContent, input[type=text], .tabEditorCell {
         margin: 8px auto;
         max-width: 600px;
         text-align: center;
