--- a/scss/alerts/_editTabsUI.scss
+++ b/scss/alerts/_editTabsUI.scss
@@ -10,12 +10,14 @@
         height: 50px;
     }
     input {
+        margin: 0 !important;
         width: calc(100% - 60px) !important;
         float: left;
     }
     #addTabButton {
+        margin: 20px auto;
+        text-align: center;
         cursor: pointer;
-        margin-top: 40px;
         width: calc(100% - 100px);
         font-size: 12pt;
         background-color: var(--darker-ui-color);
