--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -3,7 +3,7 @@
     box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,.075);
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(223, 223, 223);
+    border-color: var(--editor-border-color);
     border-radius: 15px;
     padding: 20px;
     box-sizing: border-box;
@@ -53,9 +53,6 @@
         }
     
         input {
-            padding-top: 9px;
-            padding-bottom: 9px;
-            border-radius: 10px;
             background-color: rgba(0,0,0,.15);
             float: left;
         }
