--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -70,7 +70,7 @@
 
 // Main Alert Window
 #alertWindow {
-    max-height: calc(100% - 130px);
+    max-height: calc(100% - 150px);
     overflow-y: scroll;
     width: calc(100% - 20px);
     max-width: 1000px;
@@ -79,7 +79,7 @@
     box-sizing: border-box;
     background-color: var(--bg-color);
     position: absolute;
-    top: calc(50% + 37px);
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
