--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@
 
 html {
     --body-bg-color: #f8f9fa;
-    --dark-ui-color: rgba(0,0,0,.1);
+    --dark-ui-color: rgb(206,206,206);
     --darker-ui-color: rgba(0,0,0,.2);
     --sidebarTableCellBg: rgba(0,0,0,.03);
     --editor-border-color: rgb(223, 223, 223);
@@ -21,7 +21,7 @@ html {
 }
 .darkMode {
     --body-bg-color: #1e1e1f;
-    --dark-ui-color: rgba(0,0,0,.2);
+    --dark-ui-color: rgb(29,29,29);
     --darker-ui-color: rgba(0,0,0,.4);
     --sidebarTableCellBg: rgba(0,0,0,.08);
     --editor-border-color: #262629;
